# jhhook

./: .gitignore  LICENSE
app/: build.gradle  build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  counter_hooks.cpp  counter_hooks.hpp  counter_state.cpp  counter_state.hpp  crash_trace.cpp  crash_trace.hpp  game_hooks.cpp  game_hooks.hpp  jh_abi.hpp  mod_add_hp_extras.cpp  mod_add_hp_extras.hpp  mod_confusion.cpp  mod_confusion.hpp  mod_fast_walk.cpp  mod_fast_walk.hpp  native-lib.cpp
app/src/main/java/com/example/myapplication/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
